gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag1566.d
version https://git-lfs.github.com/spec/v1
oid sha256:265041ecb07a2ace4f28edb63d452afcc6750c231984c94f9a2200212e8b12e8
size 859
